# djl-executorch-engine

./: .gitattributes  .gitignore  CLAUDE.md  README.md  build.gradle.kts  djl-executorch-engine-design.md  settings.gradle.kts
.github/workflows/: native-build-job.yml  native-build.yml  publish.yml
docs/: benchmarking.md  ci-native-build.md  executorch-build-notes.md  handover-windows-static-cxx17-findings.md
docs/superpowers/plans/: 2026-06-28-executorch-desktop-linux-native-build.md  2026-06-28-executorch-engine-phase1.md  2026-06-28-executorch-engine-phase2a-native-surface.md  2026-06-28-executorch-engine-phase2b-named-params.md  2026-06-28-memory-leak-gates.md  2026-07-05-mobilenet-example-benchmark.md  2026-07-05-pytorch-free-preprocessing.md  2026-07-15-et-runtime-pin-bump.md  2026-07-15-windows-builds.md  2026-07-16-lstm-op-wiring.md  2026-07-18-windows-static-crt.md
docs/superpowers/reports/: executorch-desktop-feasibility.md
docs/superpowers/specs/: 2026-06-28-executorch-engine-phase1-design.md  2026-06-28-executorch-engine-phase2a-native-surface-design.md  2026-06-28-executorch-engine-phase2b-named-params-design.md  2026-07-03-engine-runtime-consumption-design.md  2026-07-05-mobilenet-example-benchmark-design.md  2026-07-05-pytorch-free-preprocessing-design.md  2026-07-15-windows-builds-design.md  2026-07-16-lstm-op-wiring-design.md  2026-07-18-windows-static-crt-design.md
example/: README.md  build.gradle.kts
example/src/jmh/java/org/measly/example/: MobilenetBenchmark.java
example/src/main/java/org/measly/example/: MobilenetExample.java  MobilenetTranslator.java  PlainJavaMobilenetTranslator.java  Variant.java
example/src/test/java/org/measly/example/: ModelArtifactsTest.java  VariantTest.java
gradle/: libs.versions.toml
native/: .gitignore  CMakeLists.txt  bench.sh  build.sh  build_desktop.sh  build_qa.sh  build_variants.sh  clean_stale_tree.sh  local_build_wrapper.sh
native/cmake/: EtRuntimePin.cmake  assert_xnnpack_registered.cmake
native/core/: et_runtime.cpp  et_runtime.h
native/harness/: dtype_size.h  et_leak_harness.cpp  et_timing_harness.cpp
native/jni/: et_log_level.h  et_logging.cpp  et_logging.h  executorch_djl_jni.cpp
native/spike/: CMakeLists.txt  EtNative.java  EtSmoke.java  add.pte  cpp_smoke.cpp  export_add.py  export_dtypes.py
native/test/: et_runtime_test.cpp
native/tests/: build_config.sh  build_variants_flags.sh  build_variants_matrix.sh  check_windows_crt.sh  ci_workflow.sh  clean_stale_tree.sh  cmake_resolution.sh  docs_present.sh
src/main/java/org/measly/executorch/engine/: EtDataTypes.java  EtEngine.java  EtEngineProvider.java  EtModel.java  EtNDArray.java  EtNDManager.java  EtSymbolBlock.java  LibUtils.java
src/main/java/org/measly/executorch/jni/: EtMethodMeta.java  EtNative.java  EtTensor.java
src/main/java/org/measly/executorch/translate/: DType.java  MapTranslator.java  ModelSpec.java  ParamSpec.java
src/test/java/org/measly/executorch/: AddModelIT.java  AddTranslator.java  ClasspathTest.java  LeakStressTest.java  LoggingBridgeIT.java  LstmModelIT.java  MultiDtypeIT.java  NamedParamsIT.java  PassthroughTranslator.java  TestSupport.java
src/test/java/org/measly/executorch/engine/: EtDataTypesTest.java  EtEngineTest.java  EtModelTest.java  EtNDArrayTest.java  EtNDManagerTest.java  EtSymbolBlockLifecycleTest.java  LibUtilsTest.java
src/test/java/org/measly/executorch/jni/: EtMethodMetaTest.java  EtNativeLogTest.java  EtNativeTest.java
src/test/java/org/measly/executorch/translate/: DTypeTest.java  MapTranslatorTest.java  ModelSpecTest.java
src/test/resources/lstm/: PROVENANCE.txt
src/test/resources/models/: corrupt.pte
src/test/resources/models/named/: model_spec.json  priced.pte
tools/scripts/: export_mobilenet.py  export_with_spec.py
